# Assignment

./: README  README.md  proxy.py
django-web/: .gitignore  manage.py  pyproject.toml
django-web/home_base/: asgi.py  settings.py  urls.py  wsgi.py
django-web/product/: urls.py  views.py
django-web/product/migrations/: 0001_initial.py
django-web/product/templates/product/: fetch_user.html
node-api/: .gitignore  index.ts  package-lock.json  package.json  server.ts
node-api/prisma/: dev.db-journal  seed.ts
node-api/src/: main.ts
node-api/src/modules/: router.ts
node-api/src/modules/user/: user.controller.ts  user.router.ts  user.service.ts  user.validator.ts
