[tool.poetry]
name = "django-web"
version = "0.1.0"
description = ""
authors = ["Lektor <denislour@gmail.com>"]
readme = "README.md"
packages = [{include = "django_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
